--- a/VirtualUniverse/bin/html/index.html
+++ b/VirtualUniverse/bin/html/index.html
@@ -40,8 +40,10 @@
 			  	<img src="images/flags/flag-es.png" alt="{es}">es</a></li>
 			  <li><a href="?language=nl" rel="nl" class="languageswitch" alt="{nl}">
 			  	<img src="images/flags/flag-nl.png" alt="{nl}">nl</a></li>
-  		  <li><a href="?language=ru" rel="ru" class="languageswitch" alt="{ru}">
+			  <li><a href="?language=ru" rel="ru" class="languageswitch" alt="{ru}">
 			  	<img src="images/flags/flag-ru.png" alt="{ru}">ru</a></li>
+			  <li><a href="?language=ga" rel="ga" class="languageswitch" alt="{ga}">
+			  	<img src="images/flags/flag-ga.png" alt="{ga}">ga</a></li>
 			</ul>
 		  </div>
 	{IfShowLanguageTranslatorBarEnd}
@@ -127,8 +129,10 @@
 			  	<img src="images/flags/flag-es.png" alt="{es}">es</a></li>
 			  <li><a href="?language=nl" rel="nl" class="languageswitch" alt="{nl}">
 			  	<img src="images/flags/flag-nl.png" alt="{nl}">nl</a></li>
-  		  <li><a href="?language=ru" rel="ru" class="languageswitch" alt="{ru}">
+			  <li><a href="?language=ru" rel="ru" class="languageswitch" alt="{ru}">
 			  	<img src="images/flags/flag-ru.png" alt="{ru}">ru</a></li>
+			  <li><a href="?language=ga" rel="ga" class="languageswitch" alt="{ga}">
+			  	<img src="images/flags/flag-ga.png" alt="{ga}">ga</a></li>
 			  	-->
 	<!--		{StyleSwitcherChoiceText}:
 			  <span id="lg1">en</span>
@@ -137,7 +141,8 @@
 			  <span id="lg4">it</span>
 			  <span id="lg5">es</span>
 			  <span id="lg6">nl</span>
-			  <span id="lg7">ru</span> -->
+			  <span id="lg7">ru</span>
+			  <span id="lg8">ga</span> -->
 <!--			</ul>
 		  </div>
 	{IfShowLanguageTranslatorBarEnd}
