--- a/VirtualUniverse/Data/html/ToS.html
+++ b/VirtualUniverse/Data/html/ToS.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="cache-control" content="no-cache" />
 
-<title>Virtual Universe | Terms of Service</title>
+<title>Terms of Service | YourSim</title>
 
 <style>
 
@@ -46,7 +46,7 @@ a, a:hover {
 
       <p><a name="top"></a></p>
 <h2>Terms of Service</h2>
-<h3>Sample ToS for Virtual Universe</h3>
+<h3>Sample ToS for Your Sim</h3>
 <p>&nbsp;</p>
 <p>This agreement (the "Agreement" or the "Terms of Service") describes the terms on which you are able to access the services provided.&nbsp; The "Service" means all features, applications, content and downloads offered, including its Websites, Servers, Software,  Content, and User Content (as those terms are defined below). This offer is conditioned on your agreement to all of the terms and conditions contained in the Terms of Service, including the policies and terms linked to or otherwise referenced in this Agreement, all of which are hereby incorporated into this Agreement.<br /><br />By using the Service, you agree to and accept these Terms of Service, including all policies and terms linked to or otherwise referenced herein. If you do not so agree, you should decline this Agreement, in which case you are prohibited from accessing or using the Service.</p>
 <h3>&nbsp;</h3>
