--- a/VirtualUniverse/bin/html/index.html
+++ b/VirtualUniverse/bin/html/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -40,10 +40,8 @@
 			  	<img src="images/flags/flag-es.png" alt="{es}">es</a></li>
 			  <li><a href="?language=nl" rel="nl" class="languageswitch" alt="{nl}">
 			  	<img src="images/flags/flag-nl.png" alt="{nl}">nl</a></li>
-			  <li><a href="?language=ru" rel="ru" class="languageswitch" alt="{ru}">
+  		  <li><a href="?language=ru" rel="ru" class="languageswitch" alt="{ru}">
 			  	<img src="images/flags/flag-ru.png" alt="{ru}">ru</a></li>
-			  <li><a href="?language=ga" rel="ga" class="languageswitch" alt="{ga}">
-			  	<img src="images/flags/flag-ga.png" alt="{ga}">ga</a></li>
 			</ul>
 		  </div>
 	{IfShowLanguageTranslatorBarEnd}
@@ -129,10 +127,8 @@
 			  	<img src="images/flags/flag-es.png" alt="{es}">es</a></li>
 			  <li><a href="?language=nl" rel="nl" class="languageswitch" alt="{nl}">
 			  	<img src="images/flags/flag-nl.png" alt="{nl}">nl</a></li>
-			  <li><a href="?language=ru" rel="ru" class="languageswitch" alt="{ru}">
+  		  <li><a href="?language=ru" rel="ru" class="languageswitch" alt="{ru}">
 			  	<img src="images/flags/flag-ru.png" alt="{ru}">ru</a></li>
-			  <li><a href="?language=ga" rel="ga" class="languageswitch" alt="{ga}">
-			  	<img src="images/flags/flag-ga.png" alt="{ga}">ga</a></li>
 			  	-->
 	<!--		{StyleSwitcherChoiceText}:
 			  <span id="lg1">en</span>
@@ -141,8 +137,7 @@
 			  <span id="lg4">it</span>
 			  <span id="lg5">es</span>
 			  <span id="lg6">nl</span>
-			  <span id="lg7">ru</span>
-			  <span id="lg8">ga</span> -->
+			  <span id="lg7">ru</span> -->
 <!--			</ul>
 		  </div>
 	{IfShowLanguageTranslatorBarEnd}
