--- a/Universe/Modules/Web/html/region_info.html
+++ b/Universe/Modules/Web/html/region_info.html
@@ -160,7 +160,10 @@
 		  <li><a href="?language=de" rel="de" class="languageswitch" alt="{de}" title="<img src='images/flags/flag-de.png' alt='de' /> {de}">de</a></li>
 		  <li><a href="?language=it" rel="it" class="languageswitch" alt="{it}" title="<img src='images/flags/flag-it.png' alt='it' /> {it}">it</a></li>
 		  <li><a href="?language=es" rel="es" class="languageswitch" alt="{es}" title="<img src='images/flags/flag-es.png' alt='es' /> {es}">es</a></li>
-		CHOIX: <span id="lg1">en</span><span id="lg2">fr</span><span id="lg3">de</span><span id="lg4">it</span><span id="lg5">es</span>  
+		  <li><a href="?language=nl" rel="nl" class="languageswitch" alt="{nl}" title="<img src='images/flags/flag-nl.png' alt='nl' /> {nl}">nl</a></li>
+		  <li><a href="?language=ru" rel="ru" class="languageswitch" alt="{ru}" title="<img src='images/flags/flag-ru.png' alt='ru' /> {ru}">ru</a></li>
+		  <li><a href="?language=zh_CN" rel="zh_CN" class="languageswitch" alt="{zh_CN}" title="<img src='images/flags/flag-zh_CN.png' alt='zh_CN' /> {zh_CN}">zh_CN</a></li>
+		CHOIX: <span id="lg1">en</span><span id="lg2">fr</span><span id="lg3">de</span><span id="lg4">it</span><span id="lg5">es</span><span id="lg6">nl</span><span id="lg7">ru</span><span id="lg8">zh_CN</span>
 		</ul>
 	  </div>
 	  <div class=styleswitch>
